use `nvim` as default kitty scrollback editor

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -36,7 +36,7 @@ action_alias kitty_scrollback_nvim kitten /Users/james/.local/share/nvim/lazy/ki
 # https://github.com/kovidgoyal/kitty/issues/719#issuecomment-580559065
 # https://sw.kovidgoyal.net/kitty/overview/#the-scrollback-buffer
 # map kitty_mod+h launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay hx -
-map kitty_mod+h launch --stdin-source=@screen_scrollback --type=overlay fish -c 'cat > /tmp/kitty.log; chomper /tmp/kitty.log; hx +9999 /tmp/kitty.log' -
+map kitty_mod+h launch --stdin-source=@screen_scrollback --type=overlay fish -c 'cat > /tmp/kitty.log; chomper /tmp/kitty.log; nvim +9999 /tmp/kitty.log' -
 map kitty_mod+g launch --stdin-source=@screen_scrollback --type=overlay fish -c 'cat > /tmp/kitty.log; chomper /tmp/kitty.log; hx +9999 /tmp/kitty.log' -
 
 # Browse output of the last shell command in nvim
