remove unneeded kitty scrollback stuff

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -27,12 +27,6 @@ listen_on unix:/tmp/kitty
 shell_integration enabled
 tab_switch_strategy left
 
-# kitty-scrollback.nvim Kitten alias
-action_alias kitty_scrollback_nvim kitten /Users/james/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
-
-# Browse scrollback buffer in nvim
-# map kitty_mod+h kitty_scrollback_nvim
-
 # https://github.com/kovidgoyal/kitty/issues/719#issuecomment-580559065
 # https://sw.kovidgoyal.net/kitty/overview/#the-scrollback-buffer
 # map kitty_mod+h launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay hx -
@@ -42,7 +36,7 @@ map kitty_mod+g launch --stdin-source=@screen_scrollback --type=overlay fish -c 
 # Browse output of the last shell command in nvim
 # map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
 # Show clicked command output in nvim
-mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
+# mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
 
 map super+1 goto_tab 1
 map super+2 goto_tab 2
