--- a/ghostty/config
+++ b/ghostty/config
@@ -18,7 +18,8 @@ font-size = 18
 macos-icon = blueprint
 
 background = #000000
-background-opacity = 0.85
+# -- Blur --
+# background-opacity = 0.3
 # background-blur = macos-glass-regular
 # background-blur-radius = 65
 # shell-integration-features = no-cursor
