--- a/lazygit/config.yaml
+++ b/lazygit/config.yaml
@@ -10,14 +10,6 @@ customCommands:
     command: "set p {{ .SelectedWorktree.Path }}/{{ if .SelectedFile }}{{ .SelectedFile.Name }}{{ end }} && fish -C \"set p $p\" -c \"yazi_new_tab '$p'\""
     context: "global"
     description: "Yazi"
-  - key: "J"
-    command: "fish -c \"launch_new_tab 'cd {{ .SelectedWorktree.Path }}; nvim_find_files'\""
-    context: "global"
-    description: "Yazi"
-  - key: "<c-j>"
-    command: "fish -c \"launch_new_tab 'cd {{ .SelectedWorktree.Path }}; {{ if .SelectedFile }}nvim {{ .SelectedFile.Name }}{{ else }}nvim_find_files{{ end }}'\""
-    context: "global"
-    description: "Yazi"
   - key: "K"
     command: "fish -c \"hx_new_tab '{{ .SelectedWorktree.Path }}'\""
     context: "global"
@@ -26,3 +18,6 @@ customCommands:
     command: "p={{ .SelectedWorktree.Path }}/{{ if .SelectedFile }}{{ .SelectedFile.Name }}{{ end }} && fish -C \"set p $p\" -c \"hx_new_tab '$p'\""
     context: "global"
     description: "Yazi"
+keybinding:
+  universal:
+    nextScreenMode: "<c-j>"
