Squash merge tmux-bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,6 +59,7 @@ bind-key C-d split-window -h -c "#{pane_current_path}"
 bind-key 'C-\' split-window -v -c "#{pane_current_path}"
 bind-key C-v split-window -v -c "#{pane_current_path}"
 bind-key Enter resize-pane -Z
+bind-key C-m copy-mode
 bind-key C-Enter split-window -v -c "#{pane_current_path}"
 bind-key \\ split-window -v -c "#{pane_current_path}"
 
