--- a/ghostty/config
+++ b/ghostty/config
@@ -57,6 +57,26 @@ keybind = super+g=write_screen_file:copy
 keybind = super+r=new_split:right
 keybind = super+k=toggle_command_palette
 
+# macOS-style tab/window bindings
+keybind = super+t=new_tab
+keybind = super+w=close_surface
+keybind = super+q=close_window
+keybind = super+shift+w=close_tab
+keybind = super+shift+left_bracket=previous_tab
+keybind = super+shift+right_bracket=next_tab
+keybind = super+equal=increase_font_size:1
+keybind = super+minus=decrease_font_size:1
+keybind = super+1=goto_tab:1
+keybind = super+2=goto_tab:2
+keybind = super+3=goto_tab:3
+keybind = super+4=goto_tab:4
+keybind = super+5=goto_tab:5
+keybind = super+6=goto_tab:6
+keybind = super+7=goto_tab:7
+keybind = super+8=goto_tab:8
+keybind = super+9=goto_tab:9
+keybind = super+0=goto_tab:0
+
 # custom-shader = ~/proj/ghostty-shaders/galaxy.glsl
 # custom-shader = ~/proj/ghostty-shaders/glow-rgbsplit-twitchy.glsl
 # custom-shader = ~/proj/ghostty-shaders/tft.glsl
