--- a/ghostty/config
+++ b/ghostty/config
@@ -60,6 +60,7 @@ keybind = super+k=toggle_command_palette
 
 # macOS-style tab/window bindings
 keybind = super+t=new_tab
+keybind = super+n=new_window
 keybind = super+w=close_surface
 keybind = super+q=close_window
 keybind = super+shift+w=close_tab
