ghostty copy and paste

--- a/ghostty/config
+++ b/ghostty/config
@@ -61,6 +61,8 @@ keybind = super+k=toggle_command_palette
 
 # macOS-style tab/window bindings
 keybind = super+a=select_all
+keybind = super+c=copy
+keybind = super+v=paste
 keybind = super+t=new_tab
 keybind = super+n=new_window
 keybind = super+w=close_surface
