kitty copy paste

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -47,6 +47,9 @@ map super+7 goto_tab 7
 map super+8 goto_tab 8
 map super+9 goto_tab -1
 map super+0 select_tab
+# Select all not available?
+map super+c copy_to_clipboard
+map super+v paste_from_clipboard
 
 # enabled_layouts splits
 enabled_layouts Splits, Stack, Fat, Grid, Horizontal, Tall, Vertical
